structmeta-tests/tests/compile_fail/struct_meta/missing_unnamed_argument_inner.stderr
error: expected least 2 arguments but 1 argument was supplied
 --> $DIR/missing_unnamed_argument_inner.rs:1:61
  |
1 | #[structmeta_tests::attr_required_unnamed_param2_inner(value(10), after = 20)]
  |                                                             ^^^^
